src/test/ui/panic-implementation/panic-implementation-bad-signature-1.stderr
error: return type should be `!`
  --> $DIR/panic-implementation-bad-signature-1.rs:12:6
   |
LL | ) -> () //~ ERROR return type should be `!`
   |      ^^

error: argument should be `&PanicInfo`
  --> $DIR/panic-implementation-bad-signature-1.rs:11:11
   |
LL |     info: PanicInfo, //~ ERROR argument should be `&PanicInfo`
   |           ^^^^^^^^^

error: aborting due to 2 previous errors

